Lots of changes: Various audios were changed (but they are stored in cloud (Mega.nz) and an iframe is added to the Music html page. Some low resolution images were upscalled. Started creating a design for the section pages. Fixes _some_ typos (there are still a lot). And other changes I don't remember, but I need to commit anyway. Maybe I'll explain in the next commit.

--- a/Pesquisa/Cronologia/Cronologia.html
+++ b/Pesquisa/Cronologia/Cronologia.html
@@ -61,7 +61,7 @@ Seguiu-se o período de Regência (1831-1840), caracterizado por instabilidade p
 
 # ADAPTAÇÃO PARA O CONTEXTO DO TRABALHO
 
-Seŕa feito um painel expositivo, assim como para alguns outros assuntos. Esse painel, no entanto, seŕa bem maior do que os demais. Ele poderá ter até 4m de largura por 1,5m de altura, dependendo de como a montagem física for feita. O estilo será de "Parede Maluca" ou "Quadro de Evidências", com elementos conectados por barbantes de cores diversas que ligam tachinhas sobre o quadro. O destaque do painel será a linha do tempo descrita pela pesquisa teórica, com os principais fatos ordenados cronologicamente. Cada fato com seu nome, texto e imagem(ns) forma um nó do quadro. Os nós serão ligados entre si por barbantes de cores distintas, sendo cada cor um período histórico, enquanto as ligações feitas dentro dos próprios nós, se presentes, serão efitas usando setas de papel colorido. Cada nó terá a descrição completa do fato, semelhante à apresentada na pesquisa teórica, e elementos de transição ficarão posicionados entre os nós. Assim, cria-se a sensação de continuidade entre as seções, com intento de simular uma narrativa suave. Na parte inferior haverá uma legenda de cores.
+Será feito um painel expositivo, assim como para alguns outros assuntos. Esse painel, no entanto, será bem maior do que os demais. Ele poderá ter até 4m de largura por 1,5m de altura, dependendo de como a montagem física for feita. O estilo será de "Parede Maluca" ou "Quadro de Evidências", com elementos conectados por barbantes vermelhos que ligam tachinhas sobre o quadro. O destaque do painel será a linha do tempo descrita pela pesquisa teórica, com os principais fatos ordenados cronologicamente. Cada fato com seu nome, texto e imagem(ns) forma um nó do quadro. Os nós serão ligados entre si por barbantes, enquanto as ligações feitas dentro dos próprios nós, se presentes, serão efitas usando setas de papel colorido. Cada nó terá a descrição completa do fato, semelhante à apresentada na pesquisa teórica, e elementos de transição ficarão posicionados entre os nós. Assim, cria-se a sensação de continuidade entre as seções, com intento de simular uma narrativa suave. Na parte inferior haverá uma legenda de cores.
 
 
 # ESTRUTURA DO PAINEL E SEU CONTEÚDO
@@ -69,24 +69,12 @@ Seŕa feito um painel expositivo, assim como para alguns outros assuntos. Esse p
 ## 1. Estrutura geral
 
 **Tamanho: 4,00 m (larg) × 1,50 m (alt)**
-**Estilo: “Parede Maluca / Quadro de Evidências” - cartões / placas (nós) fixados com tachinhas, ligados por barbantes coloridos; setas de papel indicam conexões internas.**
+**Estilo: “Parede Maluca / Quadro de Evidências” - os nós são conjuntos [texto + imagem] fixados com tachinhas, ligados por barbantes vermelhos; setas de papel indicam conexões internas.**
 **Leitura principal: linha do tempo horizontal (da esquerda para a direita). Os nós são “estações” da linha; entre os nós, elementos de transição (barbante e notas curtas) criam continuidade.**
 
-## 2. Chave de cores (fios) - cada cor = um grande período
+## 2. Chave de cores (fios) - cada cor = um grande período (deprecated -> provou-se desnecessário)
 
-Azul-escuro -> Reconquista e formação (pré-1400)
-
-Verde -> Expansão atlântica e Descobrimentos (séculos XV-XVI)
-
-Terracota -> Período inicial colonial / capitanias & economia extractiva (séculos XVI)
-
-Marrom -> Período açucareiro consolidado e conflitos atlânticos (séculos XVI-XVII)
-
-Dourado -> Mineração e rearranjos do século XVIII
-
-Roxo -> Crises europeias, União Ibérica e restauração (séculos XVI-XVII)
-
-Vermelho -> Guerras Napoleônicas e processo de Independência (final Séc. XVIII - 1822)
+## 2. Título: História da colonização portuguesa no Brasil
 
 ## 3. Nós:
 
@@ -99,7 +87,7 @@ Texto principal: D. Afonso Henriques transforma o Condado Portucalense em entida
 Imagem:
 
 <img src="images_crono/AfonsoHenriques.jpg" alt="https://commons.wikimedia.org/wiki/File:AfonsoHenriques.jpg" width="800"/>
-<img src="../Mapas/images/UmPoucoDaReconquista.jpeg" alt="Um pouco da Reconquista" width="800"/>
+<img src="../Mapas/UmPoucoDaReconquista.jpeg" alt="Um pouco da Reconquista" width="800"/>
 
 Conexão ao próximo nó: Consolidação interna --> abertura para projeção marítima e expansão atlântica.
 
@@ -139,7 +127,7 @@ Texto principal: A frota de Pedro Álvares Cabral alcança o litoral do que viri
 
 Imagem:
 
-<img src="../Mapas/images/DesenhoLegalDaCostaAntigo.jpeg" alt="Desenho antigo da costa do Brasil" width="800"/>
+<img src="../Mapas/DesenhoLegalDaCostaAntigo.jpeg" alt="Desenho antigo da costa do Brasil" width="800"/>
 
 Conexão ao próximo nó: Primeiro contato --> exploração de recursos naturais e estabelecimento de feitorias.
 
@@ -152,7 +140,7 @@ Texto principal: Nos primeiros trinta anos a ocupação é rarefeita: estabelece
 
 Imagem:
 
-<img src="../Mapas/images/MapaDesenhoDaExtracaoDePauBrasil.jpg" alt="Extração do pau-brasil ao longo do litoral da América." width="800"/>
+<img src="../Mapas/MapaDesenhoDaExtracaoDePauBrasil.jpg" alt="Extração do pau-brasil ao longo do litoral da América." width="800"/>
 
 Conexão ao próximo nó: Limitação do modelo de feitorias --> necessidade de núcleos coloniais estáveis (fundação de povoados).
 
@@ -165,7 +153,7 @@ Texto principal: Martim Afonso de Sousa funda São Vicente (1532), primeiro núc
 
 Imagem:
 
-<img src="../Mapas/images/MapaDeSaoVicenteAntigo.png" alt="Mapa das Vilas da Capitania de São Vicente feito no século XVI pelo cartógrafo Luis Teixeira: São Vicente, Porto de Santos - Santos, Nossa Senhora da Conceição - Itanhaém e Santo Amaro - Guarujá." width="800"/>
+<img src="../Mapas/MapaDeSaoVicenteAntigo.png" alt="Mapa das Vilas da Capitania de São Vicente feito no século XVI pelo cartógrafo Luis Teixeira: São Vicente, Porto de Santos - Santos, Nossa Senhora da Conceição - Itanhaém e Santo Amaro - Guarujá." width="800"/>
 
 Conexão ao próximo nó: Núcleos estáveis --> sistema de capitanias para ampliar colonização.
 
@@ -197,7 +185,7 @@ Imagem:
 Conexão ao próximo nó: Administração centralizada --> consolidação da economia açucareira no Nordeste.
 
 
-### Nó 9 - Apogeu açucareiro, trabalho escravo e guerras atlânticas
+### Nó 9 - Apogeu açucareiro, trabalho e guerras atlânticas
 
 [Complexo, divido em 3 seções, conectadas por setas]
 
@@ -205,13 +193,11 @@ Período: Séculos XVI-XVII
 
 ---
 **Seções:**
-
 Economia e paisagem: O Nordeste, especialmente Pernambuco, torna-se o coração da monocultura açucareira para exportação, com grandes engenhos e casa-grande como eixo produtivo. --> (seta intra-nó).
 
 Mão de obra: A escassez de trabalho levou inicialmente à tentativa de escravizar indígenas; diante das resistências e de mortalidade, intensificou-se o tráfico de africanos escravizados, que se tornaram a base do sistema produtivo. --> (seta intra-nó)
 
 Conflitos atlânticos: A riqueza açucareira atraiu rivais europeus: ataques, incursões e guerras no Atlântico marcaram o período, exigindo esforço militar e alianças.
-
 ---
 
 Imagem:
@@ -243,7 +229,7 @@ Texto principal: Expedições bandeirantes adentraram o interior, promovendo a e
 
 Imagem:
 
-<img src="images_crono/Gold-exploitation-in-the-River-das-Velhas.png" alt="Gravura de exploração de outro no Rio das Velhas, em Minas Gerais" width="800"/>
+<img src="images_crono/Gold-exploitation-in-the-River-das-Velhas_upscale.png" alt="Gravura de exploração de outro no Rio das Velhas, em Minas Gerais" width="800"/>
 <img src="images_crono/MapaDaMineracaoColonial.png" alt="Mapa que mostra as principais áreas exploradas pela atividade mineradora no Brasil" width="800"/>
 
 Conexão ao próximo nó: Enriquecimento regional --> centralização administrativa e mudança de eixo político.
@@ -257,8 +243,8 @@ Texto principal: Em 1763 a Coroa transfere a capital administrativa do Estado do
 
 Imagem:
 
-<img src="../Mapas/images/PlanoGeralDaCidadeDoRJ_1713.jpg" alt="Plano Geral da Cidade do RJ em 1713" width="800"/>
-<img src="../Mapas/images/PlanoGeralDaCidadeDoRJ_1769.jpg" alt="Plano Geral da Cidade do RJ em 1769" width="800"/>
+<img src="../Mapas/PlanoGeralDaCidadeDoRJ_1713.jpg" alt="Plano Geral da Cidade do RJ em 1713" width="800"/>
+<img src="../Mapas/PlanoGeralDaCidadeDoRJ_1769.png" alt="Plano Geral da Cidade do RJ em 1769" width="800"/>
 
 Conexão ao próximo nó: Novas tensões econômicas e ideais iluministas --> fermento de movimentos emancipacionistas.
 
@@ -297,7 +283,7 @@ Conflito militar e reconhecimento: A separação envolve confrontos regionais; l
 
 Imagem:
 
-<img src="./images_crono/Pedro_Americo_-_Independência_ou_Morte.jpg" alt="Quadro 'Independência ou Morte' de Pedro Américo" width="800"/>
+<img src="./images_crono/Pedro_Americo_-_Independencia_ou_Morte.jpg" alt="Quadro 'Independência ou Morte' de Pedro Américo" width="800"/>
 
 Conexão com a borda do quadro: Independência --> fim do período colonial (marca de encerramento da cronologia).`;
 document.getElementById("content").innerHTML = marked.parse(markdownText);
