--- a/Pesquisa/Culinaria/Culinaria.html
+++ b/Pesquisa/Culinaria/Culinaria.html
@@ -71,17 +71,14 @@ Rodapé: 10% da altura com fontes e créditos das imagens.
 * **Títulos dos cartões de receita:** Space Mono  |  18-20
 * **Texto dos cartões:** Times New Roman  |  10-12
 
-## 4. Paleta de cores:
-Fundo principal: cinza-escuro (#181B1A)
-
-Textos: off-white (#F9F9F9)
+## 4. Paleta de cores (deprecated -> provou-se desnecessário)
 
 ## 5. Conteúdo
    ### Topo:
 
       - Título: Culinária no período colonial português no Brasil
 
-      - Subtítulo: Entre técnicas e sabores portugueses; ingredientes e saberes indígenas; práticas, temperos e africanos.
+      - Subtítulo: Entre técnicas e sabores portugueses; ingredientes e saberes indígenas; práticas e temperos africanos.
 
 ### Corpo 1 - esquerda:
 - A culinária do Brasil colonial nasceu do encontro entre práticas portuguesas, saberes indígenas e contribuições africanas - um processo de intensa troca que moldou os ingredientes, as técnicas e as rotinas alimentares. Do lado português vieram ingredientes e hábitos como o trigo, o azeite, o bacalhau, a doçaria conventual e as técnicas de refogado, conservas e cozidos; dos povos indígenas vieram a mandioca (farinha, beiju, tapioca), o milho, o cozimento na cerâmica, o moquém e os pirões; e dos africanos chegaram o dendê, o quiabo, o pilão, frituras rituais e novos modos de combinar temperos e folhas. Essa fusão gerou pratos emblemáticos - como moquecas, cozidos luso-brasileiros, angu de fubá, feijoadas, doces incríveis - como arroz doce, ambrosia e quindim - e transformou ingredientes locais em bases alimentares centrais da colônia.
