--- a/Pesquisa/Mitologia/Mitologia.html
+++ b/Pesquisa/Mitologia/Mitologia.html
@@ -27,7 +27,7 @@ Reza a lenda de Chaves que no século XII, uma jovem de origem moura ficara noiv
 
 <img src="images_mitologia/PonteRomanaDeChaves_ou_PonteDeTrajano.jpeg" alt="Ponte Romana de Chaves, também referida como ponte de Trajano, localiza-se sobre o rio Tâmega onde reza a lenda que ficou a moura encantada sobre o terceiro arco para sempre" width="800"/>
 
-<img src="images_mitologia/MouraRefemDeUmGuerreiroCristao.jpeg" alt="Após a reconquista de  Chaves pelos cristãos, a jovem moura foi feita refém por um guerreiro cristão" width="800"/>
+<img src="images_mitologia/MouraRefemDeUmGuerreiroCristao.png" alt="Após a reconquista de  Chaves pelos cristãos, a jovem moura foi feita refém por um guerreiro cristão" width="800"/>
 
 
 ## Lenda da Dama do Pé de Cabra
