--- a/Pesquisa/Cronologia/Cronologia_wip.html
+++ b/Pesquisa/Cronologia/Cronologia_wip.html
@@ -15,7 +15,7 @@
 
             font-family: monospace;
             font-weight: bold;
-            font-size: 16px
+            font-size: 20px
         }
 
         body:has(#toggle-light-mode:checked){
@@ -24,18 +24,31 @@
         }
 
         .template-section{
-            display: flex;
-            margin: 0 auto;
+            width: fit-content;
+            max-width: 80%;
+            margin-left: auto;
+            margin-right: auto;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        
+        .section-title{
+            margin-left: auto;
+            margin-right: auto;
+            width: fit-content;
+            font-family: Times;
             font-size: 30px;
             font-weight: bold;
         }
 
-        .section-title{
+        .section-subtitle{
+            width: fit-content;
             margin-left: auto;
             margin-right: auto;
         }
 
+        .main-paragraph{
+            text-align: justify;
+        }
     </style>
 </head>
 <body>
@@ -45,9 +58,67 @@
             Toggle Light Mode
         </label>
     </div>
+    <div class="middle-div">
+        <div class="template-section">
+            <p class="section-title">BASE TEÓRICA - PESQUISA</p>
+            <p class="section-subtitle">Origens:</p>
+            <p class="main-paragraph">As origens de Portugal remontam à Guerra da Reconquista, iniciada após os ensinamentos de Maomé e a criação do Islamismo. A fé muçulmana espalhou-se pela Península Arábica e pelo norte da África. Os povos dessa região, chamados de mouros, invadiram a Península Ibérica em 711 e avançaram até a França, sendo finalmente derrotados por Carlos Martel na Batalha de Poitiers. Apenas um reino resistiu à conquista árabe e manteve sua independência: o Reino Visigodo das Astúrias.
+<br><br>Esse reino iniciou um processo que duraria aproximadamente 700 anos: a Guerra da Reconquista. Aos poucos, as forças cristãs foram retomando territórios da península. Nesse contexto, surgiram novos reinos e condados, entre os quais se destacaria o futuro Portugal.</p>
 
-    <div class="template-section">
-        <p class="section-title">BASE TEÓRICA - PESQUISA</p>
+<br><br><br>
+            <p class="section-subtitle">Condado Portucalense:</p>
+            <p class="main-paragraph">Em 868 foi fundado, na cidade de Portucale, o Condado Portucalense, que mais tarde daria origem a Portugal. Nesse período, o território era vassalo do Reino de Leão.
+<br><br>Pouco mais de um século e meio depois, em 1111, nasceu uma figura quase lendária da história portuguesa: D. Afonso Henriques, ou D. Afonso I, responsável por elevar o condado à condição de reino. Um ano após seu nascimento, seu pai, D. Henrique, faleceu, tornando-o o novo conde. Contudo, por ser ainda muito jovem, sua mãe, D. Teresa, assumiu a regência.
+<br><br>Em 1128, já próximo da maioridade, D. Afonso entrou em conflito com a mãe, que pretendia casar-se com um membro da realeza da Galícia - decisão que ameaçava a autonomia do condado. Expulso da cidade, Afonso retornou com um exército e enfrentou as tropas de sua mãe na Batalha de São Mamede, derrotando-a e assumindo o governo do condado. A partir de então, deu continuidade à longa Guerra da Reconquista.
+<br><br>Em 1139, Afonso enfrentou um exército mouro em Ourique. Em desvantagem numérica, não via possibilidades de vitória, até que, segundo a tradição, teve uma visão divina. Deus lhe teria ordenado converter toda a população do condado ao Cristianismo, garantindo-lhe a vitória. Após vencer a batalha, seu próprio exército o proclamou rei, transformando o Condado Portucalense no Reino de Portugal.</p>
+
+<br><br><br>
+            <p class="section-subtitle">Reino de Portugal, o pioneiro das Grandes Navegações:</p>
+            <p class="main-paragraph">Em 1249, Portugal conquistou o Algarve, encerrando a Guerra de Reconquista para os portugueses - embora, para os espanhóis, o conflito ainda prosseguisse. Nesse momento, Portugal reunia condições únicas para se tornar pioneiro nas grandes navegações: possuía estabilidade política proporcionada pelo precoce surgimento de sua monarquia nacional, localização privilegiada junto ao mar e investimentos constantes em conhecimentos náuticos, como os da célebre Escola de Sagres.
+<br><br>Assim, os portugueses realizaram expedições que marcaram a expansão marítima. Em 1336 alcançaram as Ilhas Canárias; em 1419 descobriram a Ilha da Madeira; em 1427 chegaram aos Açores. Depois, avançaram pelo litoral africano: Cabo Branco (atual Mauritânia) em 1441; Cabo Verde em 1455; Serra Leoa em 1460; Benim e a foz do Rio Congo em 1483; até contornar, em 1488, o Cabo das Tormentas, rebatizado de Cabo da Boa Esperança. Esse feito abriu uma rota marítima para as Índias, alternativa necessária desde que os turcos otomanos bloquearam o acesso terrestre em 1453.
+<br><br>Todo esse processo culminou na célebre viagem de Vasco da Gama em 1497. Seguindo o périplo africano - navegação rente ao litoral para evitar que os navios se perdessem -, ele alcançou as Índias em 1498 e retornou triunfante a Portugal, trazendo especiarias e consolidando a nova rota para o Oriente.</p>
+
+<br><br><br>
+            <p class="section-subtitle">Descoberta do Brasil:</p>
+            <p class="main-paragraph">Apesar do sucesso em alcançar as Índias e trazer especiarias, Vasco da Gama não conseguiu estabelecer um ponto comercial estável e acabou sendo expulso. Diante disso, a Coroa Portuguesa decidiu enviar uma nova expedição, chefiada pelo almirante Pedro Álvares Cabral. Seguindo a rota do périplo africano, Cabral afastou-se excessivamente da costa, desviando do caminho e chegando, em 1500, ao litoral brasileiro, na região de Porto Seguro, atual Bahia.
+<br><br>Alguns historiadores, no entanto, consideram improvável que o desvio tenha sido acidental, sugerindo que já havia suspeitas ou mesmo informações de que existiriam terras naquela região. Afinal, oito anos antes, em 1492, Cristóvão Colombo já havia chegado à América.
+<br><br>Independentemente de ter sido intencional ou não, Cabral fincou a bandeira portuguesa no território e tomou posse em nome do rei. Como seu objetivo principal permanecia nas Índias, seguiu viagem, estabelecendo um entreposto em Calicute - logo destruído por ataques árabes - e outro em Cochim, que se manteve ativo.
+<br><br>Nos anos seguintes, a costa brasileira passou a ser explorada gradualmente, até que, em 1532, foi fundada a primeira colônia estável, em São Vicente.</p>
+
+<br><br><br>
+            <p class="section-subtitle">Capitanias e o Tratado de Tordesilhas:</p>
+            <p class="main-paragraph">Ao voltar um pouco no tempo, para 1494, presenciamos Portugal e Espanha (então representada por Castela) assinarem o Tratado de Tordesilhas, que dividia o mundo em duas zonas de influência. Foi traçada uma linha imaginária a 370 léguas a oeste das ilhas de Cabo Verde: as terras a leste seriam portuguesas, e as a oeste, espanholas.
+<br><br>Com isso, Portugal ficou com apenas uma pequena faixa do atual território brasileiro. Para viabilizar sua exploração, a Coroa Portuguesa instituiu o sistema de Capitanias Hereditárias, distribuindo grandes lotes de terra a capitães-donatários, cujo poder era transmitido por herança.
+<br><br>Das diversas capitanias criadas, apenas algumas prosperaram, sobretudo São Vicente e Pernambuco, que se tornaram polos de colonização e produção.</p>
+
+<br><br><br>
+            <p class="section-subtitle">Era pau-brasil e era açucareira:</p>
+            <p class="main-paragraph">O primeiro produto que despertou o interesse português no Brasil foi o pau-brasil, árvore de madeira avermelhada da qual se extraía um corante muito valorizado na Europa. Daí surgiu o próprio nome do país, assim como o gentílico “brasileiro”, que originalmente designava quem trabalhava na extração dessa madeira.
+<br><br>Nesse período, os indígenas tiveram papel fundamental: ajudavam a localizar e cortar as árvores, em troca de objetos europeus, por meio do escambo. O contato inicial entre portugueses e povos originários foi relativamente pacífico, embora marcado por conflitos ocasionais.
+<br><br>Com o tempo, percebeu-se que o território oferecia condições ideais para a plantação de cana-de-açúcar, o que levou à implantação da monocultura açucareira, especialmente em São Vicente e Pernambuco. Como a exploração indígena como mão de obra mostrou-se inviável, os portugueses recorreram cada vez mais à escravização de africanos, que se tornaram a base do trabalho nos engenhos.
+<br><br>Por séculos, o açúcar foi o principal produto da economia colonial, sustentando a riqueza portuguesa, mesmo após a descoberta de metais preciosos no interior do Brasil.</p>
+        
+<br><br><br>
+            <p class="section-subtitle">União Ibérica e mineração aurífera:</p>
+            <p class="main-paragraph">Os tempos de prosperidade de Portugal sofreram abalo com o reinado de D. Sebastião (1568-1578). Jovem e ambicioso, ele organizou uma expedição militar ao Marrocos, mas desapareceu em batalha, sem deixar herdeiros. O trono passou ao seu tio, o Cardeal D. Henrique, que também morreu pouco depois, sem descendência.
+<br><br>Sem sucessor direto, a coroa portuguesa foi disputada. Entre os pretendentes estava Filipe II da Espanha, que invadiu Portugal e venceu a Batalha de Alcântara (1580). Assim, foi proclamado rei de Portugal como Filipe I, dando início à União Ibérica (1580-1640), quando Portugal e Espanha passaram a ter o mesmo monarca, embora mantendo administrações distintas.
+<br><br>A união, entretanto, trouxe consequências negativas. Potências rivais da Espanha, como França, Holanda e Inglaterra, passaram a atacar colônias portuguesas, rompendo antigas alianças. Os holandeses, por exemplo, invadiram Bahia (1624), Pernambuco (1630) e chegaram a ocupar partes da África e da Ásia, aprendendo técnicas de produção açucareira que aplicaram em suas colônias das Antilhas, reduzindo a hegemonia portuguesa no comércio do açúcar.
+<br><br>Nesse período, a exploração do interior brasileiro ganhou força, sobretudo com a ação dos bandeirantes. Foi assim que se descobriu ouro em Minas Gerais, no final do século XVII. A corrida pelo metal atraiu multidões ao interior, mas também gerou forte intervenção da Coroa, que criou impostos rígidos, como a derrama, preparando o cenário para revoltas futuras.
+<br><br>Após sessenta anos de dominação, Portugal recuperou sua independência com a Restauração de 1640, quando D. João IV foi coroado. No entanto, os danos econômicos e a concorrência internacional já haviam diminuído o antigo prestígio luso.</p>
+
+<br><br><br>
+            <p class="section-subtitle">Guerras Napoleônicas e Independência do Brasil:</p>
+            <p class="main-paragraph">O fim do século XVIII foi marcado pela Revolução Francesa (1789), que abriu espaço para a ascensão de Napoleão Bonaparte. Em busca de expandir sua influência, Napoleão decretou, em 1806, o Bloqueio Continental, que proibia as nações europeias de comercializarem com a Inglaterra. Portugal, entretanto, aliado histórico dos britânicos desde o Tratado de Methuen (1703) - conhecido como “tratado dos panos e vinhos” - manteve relações comerciais com os ingleses, o que motivou a invasão francesa em 1807.
+<br><br>Com o avanço francês sobre Lisboa, a família real portuguesa, levando cerca de 15 mil pessoas da corte e grande parte dos fundos do reino, refugiou-se no Brasil sob escolta da marinha inglesa. A transferência da corte para o Rio de Janeiro (1808) transformou profundamente a colônia: decretou-se a abertura dos portos às nações amigas, rompendo o antigo monopólio comercial; fundaram-se instituições como o Banco do Brasil e a Imprensa Régia; e iniciaram-se obras e espaços culturais duradouros, como o Jardim Botânico e o Museu Nacional.
+<br><br>Após a derrota de Napoleão, cresceu em Portugal o movimento para o retorno da família real. A Revolução Liberal do Porto (1820) instaurou a monarquia constitucional e exigiu a volta de D. João VI, que retornou em 1821, deixando no Brasil seu filho, o príncipe regente D. Pedro. Pressionado também a regressar, D. Pedro se recusou no episódio conhecido como Dia do Fico (1822), que marcou a resistência contra as Cortes portuguesas. Meses depois, nas margens do rio Ipiranga, proclamou a célebre frase “Independência ou Morte!”, iniciando o processo de separação política do Brasil.
+<br><br>O rompimento, contudo, não ocorreu sem conflitos: houve batalhas sangrentas em diversas regiões, das quais participaram figuras como Maria Quitéria, que se alistou disfarçada de homem e foi reconhecida por D. Pedro I com a Ordem Imperial do Cruzeiro, e o general francês Pierre Labatut, veterano das guerras napoleônicas, que liderou tropas a favor da independência. Após vitórias militares, o Brasil foi reconhecido como independente por Portugal e por potências internacionais, como os Estados Unidos, que apoiaram o processo em consonância com a Doutrina Monroe.
+<br><br>Em 1824, foi outorgada a primeira Constituição brasileira, marcada pelo centralismo imperial. O governo de D. Pedro I, porém, enfrentou diversas revoltas e impopularidade, em parte por sua origem portuguesa e pelo autoritarismo. Em 1831, pressionado por crises internas e envolvido em uma disputa dinástica em Portugal - onde se tornou D. Pedro IV após a morte do pai -, ele abdicou em favor de seu filho, ainda criança.
+<br><br>Seguiu-se o período de Regência (1831-1840), caracterizado por instabilidade política e revoltas regionais. Com a declaração de maioridade antecipada, iniciou-se o Segundo Reinado, sob D. Pedro II, período em que o Brasil consolidou sua unidade territorial, expandiu a economia cafeeira e se projetou como império escravista no cenário internacional.</p>
+
+<br><br><br>
+            <p class="section-subtitle"></p>
+            <p class="main-paragraph"></p>
+        </div>
     </div>
 </body>
 </html>
