--- a/Pesquisa/Danca/Danca.html
+++ b/Pesquisa/Danca/Danca.html
@@ -27,17 +27,21 @@ No cotidiano, a dança cumpria papéis distintos: diversão e ostentação nas c
 Um painel expositivo será feito, apresentando algumas danças do período colonial português, dividas por origem: portuguesa, indígena, africana, ou híbrida. Haverá uma imagem representando cada dança, privilegiando gravuras e pinturas antigas, quando possível. Além disso, informações da base teórica estarão presentes em quadrinhos, sendo elas: contexto social, sincretismo e apropriação, vida cotidiana e citações de documentos históricos que retratam o exposto.
 
 
-# ORGANIZAÇÃO DO PAINEL DE CULINÁRIA
+# ORGANIZAÇÃO DO PAINEL DE DANÇA
 
 ## 1. Estrutura geral
 
 O painel será divido verticalmente em 3 regiões principais:
 
-[ CABEÇALHO / TÍTULO / SUBTÍTULO ]
+**[ CABEÇALHO / TÍTULO / SUBTÍTULO ]**
+
 ---
-[ COLUNA ESQUERDA (CATEGORIAS E IMAGENS) ] | [ COLUNA DIREITA (QUADRINHOS DA BASE TEÓRICA E CITAÇÕES) ]
+
+**[ COLUNA ESQUERDA (CATEGORIAS E IMAGENS) ] | [ COLUNA DIREITA (QUADRINHOS DA BASE TEÓRICA E CITAÇÕES) ]**
+
 ---
-[ RODAPÉ / FONTES / CRÉDITOS ]
+
+**[ RODAPÉ / FONTES / CRÉDITOS ]**
 
 ## 2. Proporções
 Topo: faixa de 15% da altura com título e subtítulo (legível).
@@ -53,11 +57,8 @@ Rodapé: 25% da altura com trechos de documentos históricos e referências.
 * **Texto corrido:** Space Mono 12-14
 * **Texto dos “quadrinhos”:** Times New Roman 10-12
 
-## 4. Paleta de cores:
-Fundo principal: cinza-escuro (#181B1A)
-Textos: off-white (#F9F9F9)
 
-## 5. Conteúdo
+## 4. Conteúdo
     ### Topo:
         - Título: Dança Colonial
         - Subtítulo: Formas, ritualidades e ritmos portugueses, indígenas e africanos e as formas híbridas que atravessaram o Brasil Colonial
@@ -88,9 +89,7 @@ Textos: off-white (#F9F9F9)
 
 2) Sincretismo e apropriação: Ao longo do período colonial, movimentos, ritmos e gestos indígenas, africanos e portugueses se misturaram, dando origem a formas híbridas. Missionários e elites europeias frequentemente reinterpretaram ou instrumentalizaram danças locais (por exemplo, em autos catequéticos), enquanto comunidades negras e indígenas preservavam e reelaboravam repertórios, transformando-os em práticas comuns às festas católicas. O resultado foi um repertório festivo marcado por sobreposições simbólicas e adaptações mútuas.
 
-3) Vida cotidiana e resistência: Dançar era parte da rotina festiva - em batizados, colheitas, casamentos e festas de padroeiro - e também era um gesto de resistência cultural nas senzalas. Nesses contextos, a dança servia para manter laços comunitários, transmitir memórias e tradições e criar espaços de autonomia simbólica. Nos quilombos, as práticas coreográficas consolidavam a identidade coletiva e funcionavam como instrumento de solidariedade e de autoafirmação.
-
-### Rodapé:`;
+3) Vida cotidiana e resistência: Dançar era parte da rotina festiva - em batizados, colheitas, casamentos e festas de padroeiro - e também era um gesto de resistência cultural nas senzalas. Nesses contextos, a dança servia para manter laços comunitários, transmitir memórias e tradições e criar espaços de autonomia simbólica. Nos quilombos, as práticas coreográficas consolidavam a identidade coletiva e funcionavam como instrumento de solidariedade e de autoafirmação.`;
 document.getElementById("content").innerHTML = marked.parse(markdownText);
 </script>
 </body>
