updated the songs that will be played during our dance presentation in the Musics.html file

--- a/Pesquisa/Musica/Musica.html
+++ b/Pesquisa/Musica/Musica.html
@@ -91,6 +91,15 @@ O áudio seŕa dividido em  blocos, um por música. Cada bloco terá:
 10) Trilha pronta, em sequência, com os aúdios introdutórios
     <iframe width="711" height="144" frameborder="0" src="https://mega.nz/embed/9vN02YgK#MXi1B4KOjhInzA_U-wUAdY86yQpW0jMDG1QFoQJ0y8k!1v1c" allowfullscreen ></iframe>
 
+11) Possibilidades de trilha para a dança (a melhor é 'MusicaQueVamosDancar_melhorada_v2.mp3')
+    <iframe width="711" height="144" frameborder="0" src="https://mega.nz/embed/Aq9GWACQ#025B4YMsY0ZBs_Z4hsX-hz0L9d7FMtOquIdvkyJt_xM!1v1c" allowfullscreen ></iframe>
+
+    <iframe width="711" height="144" frameborder="0" src="https://mega.nz/embed/wiEGQCgQ#9ZtCQyd7y08MozNdzOAHWeBLFUD12p97PrkbpO3SD9M!1v1c" allowfullscreen ></iframe>
+
+    <iframe width="711" height="144" frameborder="0" src="https://mega.nz/embed/t7EAxQwC#i24qNjRxVqgumeYfx0WP8fXxJ8sdhyo6LkR7FnCtmZU!1v1c" allowfullscreen ></iframe>
+
+    <iframe width="711" height="144" frameborder="0" src="https://mega.nz/embed/NiljACQL#vd3M9WDqZ0xSyT9wWAOdbEd1-hDs4R5sqv_Q2PW2oM4!1v1c" allowfullscreen ></iframe>
+
 
 #  PAINEL
 
